--- a/src/main/resources/assets/harvestersnight/lang/en_us.lang
+++ b/src/main/resources/assets/harvestersnight/lang/en_us.lang
@@ -12,3 +12,7 @@ config.harvestersnight.weight=Harvester spawn weight (0 disable spawn)
 config.harvestersnight.chance=1 in X chance to actually spawn
 config.harvestersnight.mode=Dimension ID whitelist (true) or blacklist (false)
 config.harvestersnight.dim=Dimension IDs white/blacklist
+config.harvestersnight.isboss=Is the Harvester a boss?
+config.harvestersnight.healthbar=Show boss health bar?
+config.harvestersnight.lightning=Does lightning strikes on Harvester spawn?
+config.harvestersnight.laugh=Does Harvester laughs on spawn?
