--- a/src/main/resources/assets/harvestersnight/lang/fr_fr.lang
+++ b/src/main/resources/assets/harvestersnight/lang/fr_fr.lang
@@ -12,3 +12,7 @@ config.harvestersnight.weight=Poids de spawn du Moissonneur (0 désactive)
 config.harvestersnight.chance=1 chance sur X de spawn quand il peut
 config.harvestersnight.mode=Whitelist (true) ou blacklist (false) pour les dimensions
 config.harvestersnight.dim=White/blacklist des ids de dimension
+config.harvestersnight.isboss=Est-ce que le Moissonneur est un boss ?
+config.harvestersnight.healthbar=Montrer la barre de vie de boss ?
+config.harvestersnight.lightning=Est-ce qu'un éclair frappe quand le Moissonneur apparaît ?
+config.harvestersnight.laugh=Est-ce que le Moissonneur rit en apparaissant ?
